maze.lessons.maze.island.IslandMaze.scala.error
Escaper:29: error: value unary_! is not a member of Int
	while(!getX()==0){
              ^